ASSIGNED - # 644: Changing Merge behavior http://mantis.jspresso.org/view.php?id=644